@@ -231,6 +231,8 @@ MW_OPTIONSMENU_TEAM=Tea&m...
 
 MW_OPTIONSMENU_EXT_TMX=External TM&Xs...
 
+MW_OPTIONSMENU_VIEW=Vie&w...
+
 MW_OPTIONSMENU_SENTSEG=&Segmentation...
 
 TF_OPTIONSMENU_MACHINETRANSLATE=Mac&hine Translate
@@ -1196,6 +1198,11 @@ EXT_TMX_TITLE=External TMX Options
 EXT_TMX_DESCRIPTION=Please select how tags of non-OmegaT TMXs should be displayed.
 EXT_TMX_SHOW_LEVEL2=&Display tags
 EXT_TMX_USE_XML=Use &XML for standalone tags (e.g., <i/>)
+
+# org.omegat.gui.dialogs.ViewOptions.java
+VIEW_OPTION_TITLE=View Options
+VIEW_OPTION_SOURCE=Display all &source segments in bold
+VIEW_OPTION_UNIQUE=Mark the first non-&unique segment
 
 # org.omegat.gui.dialogs.TagValidationOptionsDialog
 
