@@ -236,6 +236,7 @@ public class MainWindowMenu implements ActionListener, IMainMenu {
         optionsMenu.add(optionsTagValidationMenuItem = createMenuItem("MW_OPTIONSMENU_TAGVALIDATION"));
         optionsMenu.add(optionsTeamMenuItem = createMenuItem("MW_OPTIONSMENU_TEAM"));
         optionsMenu.add(optionsExtTMXMenuItem = createMenuItem("MW_OPTIONSMENU_EXT_TMX"));
+        optionsMenu.add(optionsViewOptionsMenuItem = createMenuItem("MW_OPTIONSMENU_VIEW"));
         optionsMenu.add(optionsRestoreGUIMenuItem = createMenuItem("MW_OPTIONSMENU_RESTORE_GUI"));
 
         optionsMenu.add(new JSeparator());
@@ -481,6 +482,7 @@ public class MainWindowMenu implements ActionListener, IMainMenu {
     JMenuItem optionsTagValidationMenuItem;
     JMenuItem optionsTeamMenuItem;
     JMenuItem optionsExtTMXMenuItem;
+    JMenuItem optionsViewOptionsMenuItem;
     JMenuItem projectCloseMenuItem;
     JMenuItem projectCompileMenuItem;
     JMenuItem projectEditMenuItem;
